added custom fonts and changed UI. prototype almost complete.

--- a/LeagueService/LeagueForm/LeagueForm.csproj
+++ b/LeagueService/LeagueForm/LeagueForm.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ranked.cs" />
+    <Compile Include="RecentGames.cs" />
     <Compile Include="RunePages.cs" />
     <Compile Include="Service References\ServiceReference1\Reference.cs">
       <AutoGen>True</AutoGen>
@@ -95,6 +96,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Resources\ufonts.com_friz-quadrata-bt.ttf" />
     <None Include="Service References\ServiceReference1\Service1.wsdl" />
     <None Include="Service References\ServiceReference1\Service1.xsd">
       <SubType>Designer</SubType>
@@ -144,6 +146,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\firstGradient.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\leagueFont.bmp" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
