--- a/LeagueService/LeagueForm/LeagueForm.csproj
+++ b/LeagueService/LeagueForm/LeagueForm.csproj
@@ -53,27 +53,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AggregatedStats.cs" />
-    <Compile Include="Champions.cs" />
+    <Compile Include="Json\AggregatedStats.cs" />
+    <Compile Include="Json\Champions.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="MasteryPages.cs" />
-    <Compile Include="matchList.cs" />
+    <Compile Include="Json\MasteryPages.cs" />
+    <Compile Include="Json\matchList.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Ranked.cs" />
-    <Compile Include="RecentGames.cs" />
-    <Compile Include="RunePages.cs" />
+    <Compile Include="Json\Ranked.cs" />
+    <Compile Include="Json\RecentGames.cs" />
+    <Compile Include="Json\RunePages.cs" />
     <Compile Include="Service References\ServiceReference1\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
-    <Compile Include="Summoner.cs" />
+    <Compile Include="Json\Summoner.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -150,6 +150,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\leagueFont.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Source\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
